# NovaRocks

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  build.sh  novarocks.toml.example
.codex/: settings.local.json
cpp/: brpc_server.cpp  compat.cpp
docs/plans/: 2026-04-07-optimizer-alignment.md
idl/proto/: lake_types.proto  starust_grpc.proto
idl/thrift/: AgentService.thrift  Descriptors.thrift  FrontendService.thrift  PlanNodes.thrift  Types.thrift
java/iceberg-metadata-bridge/: pom.xml
sql-tests/: Cargo.toml  run_sql_tests.sh
sql-tests/iceberg/: README.md  cleanup.sql  init.sql
sql-tests/materialized-view/: README.md
sql-tests/mv-on-iceberg/: README.md
sql-tests/rust/: main.rs
sql-tests/schema-change/: cleanup.sql
sql-tests/ssb/: init.sql
sql-tests/tpc-ds/: cleanup.sql  init.sql
sql-tests/tpc-h/: init.sql
src/: build.rs  lib.rs  main.rs  version.rs
src/cache/: block_cache.rs  cache_input_stream.rs  cached_reader.rs  data_cache.rs  mod.rs  page_cache.rs
src/common/: app_config.rs  config.rs  datasketches.rs  decimal.rs  failpoint.rs  file_identity.rs  ids.rs  largeint.rs  logging.rs  min_max_predicate.rs  mod.rs  network.rs  percentile.rs  sketch_hash.rs  thrift.rs  types.rs  util.rs
src/connector/: hdfs.rs  jdbc.rs  mod.rs
src/exec/: mod.rs  row_position.rs  variant.rs
src/formats/: mod.rs  orc.rs
src/fs/: coalesce_policy.rs  coalesced_reader.rs  hdfs.rs  local.rs  mod.rs  object_store.rs  opendal.rs  path.rs  range_plan.rs  scan_context.rs
src/lower/: fragment.rs  layout.rs  mod.rs  type_lowering.rs
src/runtime/: backend_id.rs  exchange.rs  exchange_scan.rs  exec_env.rs  global_async_runtime.rs  io.rs  load_tracking.rs  lookup.rs  mem_tracker.rs  mod.rs  profile.rs  query_context.rs  result_buffer.rs  runtime_filter_hub.rs  runtime_filter_worker.rs  runtime_state.rs  scan_executor.rs  sink_commit.rs  starlet_shard_registry.rs  thread_cpu_time.rs
src/service/: backend_service.rs  compat.rs  disk_report.rs  engine_ffi.rs  exchange_sender.rs  exec_state_reporter.rs  fe_report.rs  frontend_rpc.rs  grpc_client.rs  grpc_proto.rs  grpc_server.rs  heartbeat_service.rs  internal_rpc.rs  (+7 more)
tests/: README.md  clone_expr_test.rs  connector_test.rs  exec_test.rs  fs_parquet_oss_test.rs  runtime_test.rs  service_test.rs  standalone_cli.rs  standalone_mysql_server.rs  statistic_agg_test.rs  substring_test.rs
tools/: Cargo.toml
(+2027 files in other folders)
