[package]
name = "novarocks"
version = "0.1.0"
edition = "2024"
build = "src/build.rs"

[lib]
doctest = false

[dependencies]
# logging/config
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "time"] }
chrono = "0.4"
chrono-tz = "0.10"
atty = "0.2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# engine/connectors
arrow = { version = "57.1.0", features = ["prettyprint", "ipc", "ipc_compression"] }
arrow-buffer = { version = "57.1.0" }
arrow-data = { version = "57.1.0" }
parquet = { version = "57.1.0", features = ["arrow"] }
orc-rust = { version = "0.7.1", default-features = false }
opendal = { version = "0.52", features = ["services-oss", "services-fs", "services-s3"] }
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
mysql = "25"
url = "2"
rand = "0.8"
regex = "1.10"
hex = "0.4"
libm = "0.2"

# starust core
thrift = "0.17"
threadpool = "1"
serde_json = "1"
bytes = "1"
csv = "1"
hashbrown = { version = "0.14", features = ["raw"] }
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tonic = { version = "0.12", features = ["transport"] }
axum = "0.7"
tokio-stream = "0.1"
ctrlc = "3.4"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
md-5 = "0.10"
openssl = "0.10"
sha2 = "0.10"
sm3 = "0.4"
twox-hash = "2.1"
ryu = "1"

# cache
moka = { version = "0.12", features = ["sync"] }
once_cell = "1.19"
libc = "0.2"
num_cpus = "1"
crc32c = "0.6"
lz4_flex = "0.11"
roaring = "0.10"

[dev-dependencies]
tempfile = "3"

[features]
ssb = []

[build-dependencies]
cc = "1.2"
protoc-bin-vendored = "3"
tonic-build = "0.12"
which = "6"
